# geoffjay.github.io

./: .gitignore  .gitmodules  404.html  Bonnie.toml  Cargo.toml  LICENSE.md  README.md  Trunk.toml  asset-manifest.json  bonnie.toml  geoffjay-github-io-2013c5149d9614cf.js  geoffjay-github-io-2013c5149d9614cf_bg.wasm  geoffjay-github-io-288884ba3d4e262a.js  geoffjay-github-io-288884ba3d4e262a_bg.wasm  geoffjay-github-io-296603a35bcc6002.js  geoffjay-github-io-296603a35bcc6002_bg.wasm  geoffjay-github-io-2d364d759e5ad9d3.js  geoffjay-github-io-2d364d759e5ad9d3_bg.wasm  geoffjay-github-io-30675510727c52fe.js  geoffjay-github-io-30675510727c52fe_bg.wasm  geoffjay-github-io-5989e2f9a0af2c65.js  geoffjay-github-io-5989e2f9a0af2c65_bg.wasm  geoffjay-github-io-5ddda4cd42f282d1.js  geoffjay-github-io-5ddda4cd42f282d1_bg.wasm  geoffjay-github-io-5f814bfb275f5ca4.js  geoffjay-github-io-5f814bfb275f5ca4_bg.wasm  geoffjay-github-io-687ff49bccacdd34.js  geoffjay-github-io-687ff49bccacdd34_bg.wasm  geoffjay-github-io-69962f71bf5f7aa2.js  geoffjay-github-io-69962f71bf5f7aa2_bg.wasm  geoffjay-github-io-6b81fbcae7c7711f.js  geoffjay-github-io-6c02eb226afb4ef4.js  geoffjay-github-io-6c02eb226afb4ef4_bg.wasm  geoffjay-github-io-6eb845204e6a6039.js  geoffjay-github-io-6eb845204e6a6039_bg.wasm  geoffjay-github-io-806983c557b5f202.js  geoffjay-github-io-806983c557b5f202_bg.wasm  geoffjay-github-io-8e54837c1d337457.js  geoffjay-github-io-8e54837c1d337457_bg.wasm  geoffjay-github-io-a5724ab747906d7c.js  (+42 more)
_posts/: 2021-11-12_first-post.md
components/: alert.tsx  layout.tsx
config/: tailwind.config.js
lib/: constants.ts
(+58 files in other folders)
