[package]
name = "geoffjay-github-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.8"
js-sys = "0.3"
log = "0.4"
pulldown-cmark = { version = "0.9", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19.3"
yew-router = "0.16"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
