[package]
name = "geoffjay-github-io"
edition = "2021"
repository = "https://github.com/geoffjay/geoffjay.github.io"
version = "0.1.0"

[dependencies]
gloo = "0.8"
js-sys = "0.3"
log = "0.4"
pulldown-cmark = { version = "0.9", default-features = false }
time = { version = "0.3.30", features = ["macros", "formatting"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3"
yew-router = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[patch.'crates-io']
# yew = { path = "../yew/packages/yew" }
# yew-router = { path = "../yew/packages/yew-router" }
yew = { git = "https://github.com/geoffjay/yew", branch = "mdx" }
yew-router = { git = "https://github.com/geoffjay/yew", branch = "mdx" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
